# PyBCM

./: .bumpversion.cfg  .gitignore  CHANGELOG.md  CODEBASE.md  MANIFEST.in  MANUAL.md  README-FastAPI.md  README.md  TODO.md  pybcm.spec  pyproject.toml  requirements.txt  setup.py
bcm/: LAYOUT.md  Sample taxonomy.json  __init__.py  agent.py  app.py  archimate_export.py  audit_view.py  bakery.html  chat_sample.py  database.py  db2.json  dialogs.py  hq_layout.py  io.py  layout.py  layout_manager.py  mermaid_export.py  models.py  pb.py  pptx_export.py  relations.xml  settings.py  squarecap-layout.html  svg_export.py  test.html  treeview.py  ui.py  utils.py  visualizer.py  web_agent.py
bcm-client/: package-lock.json  package.json
bcm-client/src/: App.tsx  index.css
bcm-client/src/api/: client.ts
bcm-client/src/components/: About.tsx  AuditLogs.tsx  BurgerMenu.tsx  CapabilityTree.tsx  DraggableCapability.tsx  Settings.tsx  Visualize.tsx
bcm-client/src/contexts/: AppContext.tsx
bcm-client/src/types/: api.ts
bcm/api/: logs.py  openapi.json  server.py
bcm/static/: chat.js  styles.css
bcm/static/client/: index.html
bcm/static/client/assets/: index-59dhBtxh.js  index-7l59X-3f.js  index-9Z43W8WS.js  index-Bb5THh9x.js  index-C2LVQ54q.js  index-C417Vdv7.js  index-CRPQ-Yha.js  index-CbVgxXoD.js  index-Cj_J-ijC.css  index-CmKPAvp9.js  index-CtkhDokt.js  index-Cx4b00cZ.css  index-CyGi5Yeu.css  index-DBJnLVjG.css  index-DLIK03M3.js  index-DjIcakze.css  index-DszZCrCi.js  index-JwV0xtaw.css  index-KqHo81rc.js  index-Sr0sXm4H.js  index-l0QvnmjZ.css
bcm/templates/: chat.html  concept_expansion_prompt.j2  expansion_prompt.j2  expansion_prompt_gpt.j2  first_level_concepts.j2  first_level_prompt.j2  first_level_prompt_gpt.j2  layout_model.html  layout_model.j2  report_chapter.j2  report_synopsis.j2  software_categorisation_prompt.j2  system_prompt.j2
