[project]
name = "pybcm"
version = "0.1.0"
description = "A Business Capability Modeler built with Python and ttkbootstrap"
authors = []
dependencies = [
    "ttkbootstrap>=1.10.1",
    "sqlalchemy>=2.0.0",
    "pydantic>=2.0.0",
    "pydantic-ai[logfire]>=0.0.15",
    "jinja2>=3.1.5",
    "python-pptx>=1.0.2",
    "markdown>=3.7",
    "tkinterweb>=3.24.8",
    "fastapi>=0.115.6",
    "uvicorn[standard]>=0.34.0",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "logfire[sqlite3]>=2.11.0",
    "tkhtmlview>=0.3.1",
]
requires-python = ">=3.11"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project.scripts]
bcm = "bcm:main"

[tool.hatch.build.targets.wheel]
packages = ["bcm"]

[dependency-groups]
dev = [
    "ruff>=0.8.4",
]

[tool.logfire]
ignore_no_config = true
